k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedmeback-service
spec:
  selector:
    app: feedmeback
  ports:
    - name: http
      port: 80
      targetPort: 4000
  type: ClusterIP
